--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h2>RUN BUDDY</h2>
-        What we do
+        What we do What You do Your Trainers Reach Out
     </body>
 </html>
