--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                 </ul>
             </nav>
         </header>
-
         <!-- hero/jumbotron -->
         <section>
             <div>
@@ -45,10 +44,26 @@
                 <input type="text" placeholder="Email address" name="email" id="email" />
                 <label for="phone">Enter a phone number:</label>
                 <input type="text" placeholder="Phone number" name="phone" id="phone" >
+                <p>
+                    Have you worked out with a trainer before?
+                    <input type="radio" name="trainer-confirm" id="trainer-yes">
+                    <label for="trainer-yes">Yes</label>
+                    <input type="radio" name="trainer-confirm" id="trainer-no">
+                    <label for="trainer-no">No</label>
+                </p>
+                <p>    
+                    <label for="checkbox"> 
+                        I acknowledge that I am at least 18 years of age
+                    </label>
+                    <input type="checkbox" name="age-confirm" id="checkbox">
+                </p>
+                <button type="submit">
+                    Get Running!
+                </button>
             </form>
             </div>
         </section>
-
+        <!-- end hero-->
         <!-- "what we do" section -->
         <section>
             <h2>What We Do</h2>
