--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </section>
 
         <!-- "What you do" section-->
-        <section id="what-you=do" class="steps">
+        <section id="what-you-do" class="steps">
             <h2 class="section-title secondary-border">What You Do</h2>
 
             <div>
@@ -103,8 +103,37 @@
         </section>
 
         <!-- "meet the trainers"-->
-        <section id="meet=the-trainers">
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">Meet The Trainers</h2>
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore voluptas possimus, cumque praesentium repellendus voluptatem, omnis laboriosam facilis mollitia accusamus vitae, nobis veritatis? Temporibus nostrum mollitia nam iure explicabo eligendi?
+                    </p>
+                </div>
+            </article>
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates doloremque aliquam delectus sunt quae minima. Quisquam reiciendis voluptate vitae a ut, ab natus aut illo error incidunt eius, ratione fugiat.
+                    </p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+            </article>
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband" />
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere qui veniam excepturi consectetur officia voluptatum quasi quod reprehenderit nesciunt maxime ut similique laboriosam odio praesentium impedit, accusantium sed? Laudantium, aspernatur?
+                    </p>
+                </div>
+            </article>
         </section>
 
         <!-- "reach out"-->
