--- a/index.html
+++ b/index.html
@@ -139,6 +139,30 @@
         <!-- "reach out"-->
         <section id="reach-out">
             <h2>Reach Out</h2>
+            <div class="contact-info">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3598.229843932135!2d-80.37150478398392!3d25.59727762163153!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9c3890dbfe6e5%3A0x76c27a07a5e83c83!2sPinolandia%20%233!5e0!3m2!1sen!2sus!4v1646619134593!5m2!1sen!2sus" 
+                width="600" 
+                height="450" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy">
+                </iframe>
+            </div>
+            <div>
+                <h3>Run Buddy</h3>
+                <p>
+                    Any questions of concerns before signing up?
+                    <br>
+                    Let us know and we'll be happy to talk to you!
+                </p>
+                <address>
+                    55 Main Street <br>
+                    Some town, CA <br>
+                    12345 <br>
+                    P: 555.RUN.BUDZ (555.786.2839) <br>
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
         </section>
 
         <!-- footer-->
