--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <footer>
             <h2>❤️ Made with love by Run Buddy.</h2>
             <div>
-                <a href="#">Read Our privacy policy</a><br />
+                <a href="./privacy-policy.html">Read Our privacy policy</a><br />
                 &copy; 2019 Run Buddy, Inc. 
             </div>
         </footer>
