--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
         </header>
         <!-- hero/jumbotron -->
         <section class="hero">
+            <div class="hero-cta">
+                <h2>Start Building Habits.</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur dicta repellat maiores nam rerum unde saepe neque consectetur delectus qui facilis atque minus quam necessitatibus, corporis dolor laudantium sequi doloremque!
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore quod recusandae nulla at nobis consequatur aliquid nisi autem. Tenetur cupiditate earum itaque voluptas optio praesentium laboriosam quam perspiciatis aliquid sapiente?
+                </p>
+            </div>
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
