--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
         </header>
         <!-- hero/jumbotron -->
         <section class="hero">
-            <div class="hero-cta flex-row">
+            <div class="hero-cta">
                 <h2>Start Building Habits.</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur dicta repellat maiores nam rerum unde saepe neque consectetur delectus qui facilis atque minus quam necessitatibus, corporis dolor laudantium sequi doloremque!
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore quod recusandae nulla at nobis consequatur aliquid nisi autem. Tenetur cupiditate earum itaque voluptas optio praesentium laboriosam quam perspiciatis aliquid sapiente?
                 </p>
             </div>
