add flexbox to the trainers

--- a/index.html
+++ b/index.html
@@ -144,34 +144,37 @@
             <div class="flew-row">
             <h2 class="section-title primary-border">Meet The Trainers</h2>
             </div>
-            <article class="trainer">
-                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-                <div class="trainer-bio text-left">
-                    <h3>Arron Stephens</h3>
-                    <h4>Speed / Strength</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore voluptas possimus, cumque praesentium repellendus voluptatem, omnis laboriosam facilis mollitia accusamus vitae, nobis veritatis? Temporibus nostrum mollitia nam iure explicabo eligendi?
-                    </p>
-                </div>
-            </article>
-            <article class="trainer">
-                <div class="trainer-bio text-right">
-                    <h3>Joanna Gill</h3>
-                    <h4>Endurance</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates doloremque aliquam delectus sunt quae minima. Quisquam reiciendis voluptate vitae a ut, ab natus aut illo error incidunt eius, ratione fugiat.
-                    </p>
-                </div>
-                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
-            </article>
-            <article class="trainer">
-                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband" />
-                <div class="trainer-bio text-left">
-                    <h3>Harry "the headband" Smith</h3>
-                    <h4>Strength</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere qui veniam excepturi consectetur officia voluptatum quasi quod reprehenderit nesciunt maxime ut similique laboriosam odio praesentium impedit, accusantium sed? Laudantium, aspernatur?
-                    </p>
-                </div>
+                <div class="trainers">
+                    <article class="trainer">
+                        <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                        <div class="trainer-bio">
+                            <h3 class="trainer-name">Arron Stephens</h3>
+                            <h4 class="trainer-role">Speed / Strength</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore voluptas possimus, cumque praesentium repellendus voluptatem, omnis laboriosam facilis mollitia accusamus vitae, nobis veritatis? Temporibus nostrum mollitia nam iure explicabo eligendi?
+                            </p>
+                        </div>
+                    </article>
+                    <article class="trainer">
+                        <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+                        <div class="trainer-bio">
+                            <h3 class="trainer-name">Joanna Gill</h3>
+                            <h4 class="trainer-role">Endurance</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates doloremque aliquam delectus sunt quae minima. Quisquam reiciendis voluptate vitae a ut, ab natus aut illo error incidunt eius, ratione fugiat.
+                            </p>
+                        </div>
+                    </article>
+                    <article class="trainer">
+                        <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband" />
+                        <div class="trainer-bio">
+                            <h3 class="trainer-name">Harry "the headband" Smith</h3>
+                            <h4 class="trainer-role">Strength</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere qui veniam excepturi consectetur officia voluptatum quasi quod reprehenderit nesciunt maxime ut similique laboriosam odio praesentium impedit, accusantium sed? Laudantium, aspernatur?
+                            </p>
+                        </div>
+                    </div>
             </article>
         </section>
 
